--- a/libFront/templates/libFront/headerbar.html
+++ b/libFront/templates/libFront/headerbar.html
@@ -124,3 +124,36 @@
 {% endif %}
 
 {% include 'libFront/bgimg.html' %}
+<script>
+    var has_login = false;
+    {% if request.session.has_login %}
+        has_login = true;
+    {% endif %}
+
+    var lastTime = new Date().getTime();
+    var currentTime = new Date().getTime();
+    var expiretime = 1000 * 10 * 10;
+
+    $(function () {
+        /* 鼠标移动事件 更新上次操作时间 */
+        $(document).mouseover(function () {
+            lastTime = new Date().getTime();
+        });
+    });
+
+    function autoLogout() {
+        if (has_login) {
+            currentTime = new Date().getTime();
+            if (currentTime - lastTime > expiretime) {
+                alert("检测到连续%s秒无动作，即将自动退出".replace("%s", expiretime / 1000));
+                has_login = false;
+                window.location.replace("/lf/logout");
+            }
+        }
+    }
+
+    /* 定时器
+     * 间隔1秒检测是否长时间未操作页面
+     */
+    window.setInterval(autoLogout, 1000);
+</script>
