--- a/homep/templates/homep/index.html
+++ b/homep/templates/homep/index.html
@@ -95,7 +95,7 @@
 </header><!-- End Header -->
 
 <body>
-<audio id="music" src="{% static 'homep/bgm/bgm.mp3' %}" preload="auto" loop="loop"
+<audio id="music" src="{% static 'homep/bgm/bgm1.mp3' %}" preload="auto" loop="loop"
        style="display: none"></audio>
 <script>
     function Play() {
